# LogStream

./: .gitignore  README.md  startup.sh  stress_test.py
cpp_engine/: CMakeLists.txt
cpp_engine/include/: InvertedIndex.h
cpp_engine/src/: InvertedIndex.cpp  main.cpp
csharp_processer/LogProcessor/: LogDbContext.cs  LogProcessor.csproj  Program.cs  Worker.cs
csharp_processer/LogProcessor/Properties/: launchSettings.json
py_ingestor/: database.py  main.py
web_dashboard/: README.md  angular.json  package-lock.json  package.json
web_dashboard/src/app/: app.config.ts  app.html  app.scss  app.ts
web_dashboard/src/app/services/: log-api.ts
